--- a/Backend/.env
+++ b/Backend/.env
@@ -1,14 +1,3 @@
-# Database
 DATABASE_URL="mysql://root:root@localhost:3306/healthyconnect"
-
-# Server
+JWT_SECRET="your_jwt_secret"
 PORT=5000
-NODE_ENV=development
-
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
-
-# File Upload
-UPLOAD_PATH=./uploads
-MAX_FILE_SIZE=10485760
