--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,4 @@
-  {
+{
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -21,7 +21,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.7.1",
+    "react-router-dom": "^7.8.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
   },
@@ -39,7 +39,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
   }
