--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,9 +21,11 @@
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "socket.io": "^4.8.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.13.0"
+    "prisma": "^6.13.0",
+    "typescript": "^5.9.2"
   }
 }
