--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,53 +19,61 @@
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix"
   },
-  "keywords": ["telehealth", "healthcare", "api", "nodejs", "express", "prisma"],
+  "keywords": [
+    "telehealth",
+    "healthcare",
+    "api",
+    "nodejs",
+    "express",
+    "prisma"
+  ],
   "author": "HealthyConnect Team",
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
+    "aws-sdk": "^2.1574.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.1.5",
+    "express-slow-down": "^2.0.1",
     "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.1.0",
-    "winston": "^3.11.0",
-    "compression": "^1.7.4",
-    "express-slow-down": "^2.0.1",
     "node-cron": "^3.0.3",
-    "sharp": "^0.33.2",
-    "aws-sdk": "^2.1574.0",
-    "cloudinary": "^1.41.3",
     "nodemailer": "^6.9.8",
+    "sharp": "^0.33.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "stripe": "^14.17.0",
     "twilio": "^4.20.1",
-    "stripe": "^14.17.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prisma": "^6.13.0",
-    "typescript": "^5.9.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
-    "eslint": "^8.57.0",
-    "@types/node": "^20.11.19",
-    "@types/express": "^4.17.21",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
-    "@types/morgan": "^1.9.9",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/nodemailer": "^6.4.14"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.14",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "prisma": "^6.13.0",
+    "supertest": "^6.3.4",
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=18.0.0",
