--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
   }
 }
