--- a/Backend/.env
+++ b/Backend/.env
@@ -1,25 +1,13 @@
+# Database Configuration
+DATABASE_URL="mysql://root:password@localhost:3306/healthyconnect"
+
+# JWT Configuration
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_EXPIRES_MS="86400000"
+
 # Server Configuration
-NODE_ENV=development
 PORT=5000
-FRONTEND_URL=http://localhost:5174
+NODE_ENV=development
 
-# Database - You need to set up a MySQL database and update this URL
-DATABASE_URL="mysql://root:root@localhost:3306/healthyconnect"
-
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=24h
-JWT_EXPIRES_MS=86400000
-
-# File Upload
-MAX_FILE_SIZE=10485760
-UPLOAD_PATH=./uploads
-ALLOWED_FILE_TYPES=image/jpeg,image/png,application/pdf
-
-# Disable features that require external services for development
-ENABLE_EMAIL=false
-ENABLE_SMS=false
-ENABLE_PAYMENTS=false
-ENABLE_VIDEO_CALLS=true
-ENABLE_FILE_UPLOADS=true
-ENABLE_NOTIFICATIONS=true
+# CORS Configuration
+FRONTEND_URLS="http://localhost:5173,http://localhost:5174,http://127.0.0.1:5173,http://127.0.0.1:5174"
