Fix: Added node-wait-for-it dependency for Railway build process

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
-    "build": "prisma generate",
-    "postinstall": "prisma generate",
+    "start": "npx prisma generate && npx prisma migrate deploy && node src/server.js",
+    "build": "echo 'Build completed'",
+    "postinstall": "echo 'Postinstall completed'",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:reset": "prisma migrate reset --force",
