--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -15,10 +14,13 @@ permissions:
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   build-and-deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     
     steps:
@@ -42,18 +44,13 @@ jobs:
         cd frontend
         npm run build
       env:
-        VITE_API_URL: https://healthconnect-production.up.railway.app/api
-        VITE_SOCKET_URL: https://healthconnect-production.up.railway.app
-        VITE_BASE_URL: https://healthconnect-production.up.railway.app
+        VITE_API_URL: ${{ secrets.VITE_API_URL }}
+        VITE_SOCKET_URL: ${{ secrets.VITE_SOCKET_URL }}
+        VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
         
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
-    - name: List build output
-      run: |
-        echo "Build output contents:"
-        ls -la ./frontend/dist/
-        
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
@@ -62,4 +59,3 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
-      timeout-minutes: 5
